test/script/gradle/fail-compilation/run.bash
pwd
cd ../../../test/script/gradle/fail-compilation
source lines.source
exit 1
